added ajax function, filters, and testing

--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -32,7 +32,7 @@
 					by Schedule</button>
 			</div>
 			<div class="filter">
-				<label>Patio<input type="checkbox" name="patio"></input></label>
+				<label>Patio<input type="checkbox" id="patio"></input></label>
 				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
 					by Filters</button>
 			</div>
