--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<nav class="navbar">
-			<img class="logo" src="images/happy.jpg" />
+			<img class="logo" src="images/happyLogo4.gif" />
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
@@ -32,7 +32,9 @@
 					by Schedule</button>
 			</div>
 			<div class="filter">
-				<label>Patio<input type="checkbox" id="patio"></input></label>
+				<label>Patio<input type="checkbox" name="patio" id="filter-name"></input></label>
+				<br>
+				<label>Off-Street Parking<input type="checkbox" name="off-street-parking" id="filter-name"></input></label>
 				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
 					by Filters</button>
 			</div>
