fixed js function to accept multiple filters

--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -32,9 +32,9 @@
 					by Schedule</button>
 			</div>
 			<div class="filter">
-				<label>Patio<input type="checkbox" name="patio" id="filter-name"></input></label>
+				<label>Patio<input type="checkbox" name="patio" id="filter-name" class="filter-name"></input></label>
 				<br>
-				<label>Off-Street Parking<input type="checkbox" name="off-street-parking" id="filter-name"></input></label>
+				<label>Off-Street Parking<input type="checkbox" name="off-street-parking" id="filter-name" class="filter-name"></input></label>
 				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
 					by Filters</button>
 			</div>
