--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -44,7 +44,7 @@
 					<option value="8">8:00 PM</option> 
 					<option value="9">9:00 PM</option> 
 				</select> 
-				
+				<br>
 
 				<div class="filter">
 					<label>Patio<input type="checkbox" name="patio"
@@ -52,6 +52,7 @@
 						Parking<input type="checkbox" name="off-street-parking"
 						id="filter-name" class="filter-name"></input>
 					</label> 
+					<br><br>
 					<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
 						by Filters</button>
 						<button id="resetMarkers" name="resetMarkers">Reset</button>
@@ -62,6 +63,7 @@
 			<div id="googleMap"></div>
 		</div>
 
+<footer><img src="images/DD.gif"></footer>
 
 
 		<script src="https://code.jquery.com/jquery-3.2.1.js"
