--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css"></link>
+<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One"
+	rel="stylesheet"></link>
 <title>Columbus Happy Hours</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
 		<img class="header-pic" src="images/happyhourbanner.png" />
 	</div>
 
-	<h1>Columbus Happy Hours!</h1>
+	<h1 class="title">Columbus Happy Hours!</h1>
 
 
 	<div class="lower-page-container">
@@ -26,52 +28,91 @@
 			<h3>Filters</h3>
 			<div class="schedule-filter">
 
-				<label for="startTime">Start Time: </label>  
-				 <select
-					id="startTime" name="startTime"> 
-					<option value="0">-----</option>
-					<option value="4">4:00 PM</option> 
-					<option value="5">5:00 PM</option> 
-					<option value="6">6:00 PM</option> 
-					<option value="7">7:00 PM</option> 
-				</select> 
-				<label for="endTime">End Time: </label> 
-				<select id="endTime"
-					name="startTime"> 
-					<option value="0">-----</option>
-					<option value="6">6:00 PM</option> 
-					<option value="7">7:00 PM</option> 
-					<option value="8">8:00 PM</option> 
-					<option value="9">9:00 PM</option> 
-				</select> 
-				<br>
+				<label for="startTime">Start Time: </label>
+				<div class="style-select color semi-square">
+					<select id="startTime" name="startTime">
 
-				<div class="filter">
-					<label>Patio<input type="checkbox" name="patio"
-						id="filter-name" class="filter-name"></input></label> <br> <label>Off-Street
-						Parking<input type="checkbox" name="off-street-parking"
-						id="filter-name" class="filter-name"></input>
-					</label> 
-					<br><br>
-					<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
-						by Filters</button>
-						<button id="resetMarkers" name="resetMarkers">Reset</button>
+						<option value="0">-----</option>
+						<option value="16">4:00 PM</option>
+						<option value="17">5:00 PM</option>
+						<option value="18">6:00 PM</option>
+						<option value="19">7:00 PM</option>
+
+					</select>
 				</div>
+				<br> <label for="endTime">End Time: </label>
+				<div class="style-select color semi-square">
+					<select id="endTime" name="startTime">
+						<option value="0">-----</option>
+						<option value="18">6:00 PM</option>
+						<option value="19">7:00 PM</option>
+						<option value="20">8:00 PM</option>
+						<option value="21">9:00 PM</option>
 
+					</select>
+				</div>
+				<br>
+				<div class="filter">
+					<label><input type="checkbox" name="patio" id="filter-name"
+						class="filter-name"></input>Patio</label> <br> <label><input
+						type="checkbox" name="off-street-parking" id="filter-name"
+						class="filter-name"></input>Off-Street Parking </label> <br> <label><input
+						type="checkbox" name="bike-parking" id="filter-name"
+						class="filter-name"></input>Bike Parking </label> <br> <label><input
+						type="checkbox" name="good-kids" id="filter-name"
+						class="filter-name"></input>Kid Friendly </label> <br> <label><input
+						type="checkbox" name="good-groups" id="filter-name"
+						class="filter-name"></input>Large Group</label> <br> <label><input
+						type="checkbox" name="wi-fi" id="filter-name" class="filter-name"></input>Wifi</label>
+					<br> <label><input type="checkbox" name="tv"
+						id="filter-name" class="filter-name"></input>TV</label> <br> <label><input
+						type="checkbox" name="pool-table" id="filter-name"
+						class="filter-name"></input>Pool Table </label> <br> <br>
+				</div>
+				<div class="filter-container">
+					<div class="noise-level">
+						<label class="indent">Noise Level:</label><label><input
+							type="checkbox" name="noise-very-loud" id="filter-name"
+							class="filter-name"></input>Very Loud </label><label><input
+							type="checkbox" name="noise-loud" id="filter-name"
+							class="filter-name"></input>Loud</label><label><input
+							type="checkbox" name="noise-average" id="filter-name"
+							class="filter-name"></input>Average</label>
+					</div>
+					<div class="ambiance">
+						<label class="indent">Ambiance:</label> <label><input
+							type="checkbox" name="amb-casual" id="filter-name"
+							class="filter-name"></input>Casual</label> <label><input
+							type="checkbox" name="amb-trendy" id="filter-name"
+							class="filter-name"></input>Trendy</label> <label><input
+							type="checkbox" name="amb-sports" id="filter-name"
+							class="filter-name"></input>Sports</label> <label><input
+							type="checkbox" name="amb-dive" id="filter-name"
+							class="filter-name"></input>Dive</label> <label><input
+							type="checkbox" name="amb-pub" id="filter-name"
+							class="filter-name"></input>Pub</label>
+					</div>
+				</div>
+				<br>
+				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
+					by Filters</button>
+				<button id="resetMarkers" name="resetMarkers">Reset</button>
 			</div>
-			</div>
-			<div id="googleMap"></div>
 		</div>
+		<div id="googleMap"></div>
+	</div>
 
-<footer><img src="images/DD.gif"></footer>
+	<footer>
+		<img src="images/DD.gif">
+	</footer>
 
 
-		<script src="https://code.jquery.com/jquery-3.2.1.js"
-			integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-			crossorigin="anonymous"></script>
-		<script type="text/javascript" src="script.js"></script>
-		<script
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"
+		integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script>
 </body>
 
 </html>
