--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -33,6 +33,7 @@
 					<select id="startTime" name="startTime">
 
 						<option value="0">-----</option>
+						<option value="11">11:00 AM</option>
 						<option value="16">4:00 PM</option>
 						<option value="17">5:00 PM</option>
 						<option value="18">6:00 PM</option>
@@ -48,6 +49,7 @@
 						<option value="19">7:00 PM</option>
 						<option value="20">8:00 PM</option>
 						<option value="21">9:00 PM</option>
+						<option value="22">10:00 PM</option>
 
 					</select>
 				</div>
@@ -69,7 +71,7 @@
 						type="checkbox" name="pool-table" id="filter-name"
 						class="filter-name"></input>Pool Table </label> <br> <br>
 				</div>
-				<div class="filter-container">
+				<div class="noise-amb-container">
 					<div class="noise-level">
 						<label class="indent">Noise Level:</label><label><input
 							type="checkbox" name="noise-very-loud" id="filter-name"
