--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -29,7 +29,7 @@
 			<div class="schedule-filter">
 
 				<label for="startTime">Start Time: </label>
-				<div class="style-select color semi-square">
+				<div class="time-dropdown color semi-square">
 					<select id="startTime" name="startTime">
 
 						<option value="0">-----</option>
@@ -42,7 +42,7 @@
 					</select>
 				</div>
 				<br> <label for="endTime">End Time: </label>
-				<div class="style-select color semi-square">
+				<div class="time-dropdown color semi-square">
 					<select id="endTime" name="startTime">
 						<option value="0">-----</option>
 						<option value="18">6:00 PM</option>
@@ -53,7 +53,7 @@
 
 					</select>
 				</div>
-				<br>
+				<div class="checkbox-filters">
 				<div class="filter">
 					<label><input type="checkbox" name="patio" id="filter-name"
 						class="filter-name"></input>Patio</label> <br> <label><input
@@ -95,10 +95,13 @@
 							class="filter-name"></input>Pub</label>
 					</div>
 				</div>
-				<br>
+				</div>
+
+				<div class="button-container">
 				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
 					by Filters</button>
 				<button id="resetMarkers" name="resetMarkers">Reset</button>
+				</div>
 			</div>
 		</div>
 		<div id="googleMap"></div>
