--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -28,19 +28,21 @@
 			<h3>Filters</h3>
 			<div class="schedule-filter">
 
-				<label for="startTime">Start Time: </label>
-				<div class="time-dropdown color semi-square">
-					<select id="startTime" name="startTime">
+					<label for="startTime">Start Time: </label>
+					<div class="time-dropdown color semi-square">
 
-						<option value="0">-----</option>
-						<option value="11">11:00 AM</option>
-						<option value="16">4:00 PM</option>
-						<option value="17">5:00 PM</option>
-						<option value="18">6:00 PM</option>
-						<option value="19">7:00 PM</option>
+						<select id="startTime" name="startTime">
 
-					</select>
-				</div>
+							<option value="0">-----</option>
+							<option value="11">11:00 AM</option>
+							<option value="16">4:00 PM</option>
+							<option value="17">5:00 PM</option>
+							<option value="18">6:00 PM</option>
+							<option value="19">7:00 PM</option>
+
+						</select>
+					</div>
+	
 				<br> <label for="endTime">End Time: </label>
 				<div class="time-dropdown color semi-square">
 					<select id="endTime" name="startTime">
@@ -54,53 +56,53 @@
 					</select>
 				</div>
 				<div class="checkbox-filters">
-				<div class="filter">
-					<label><input type="checkbox" name="patio" id="filter-name"
-						class="filter-name"></input>Patio</label> <br> <label><input
-						type="checkbox" name="off-street-parking" id="filter-name"
-						class="filter-name"></input>Off-Street Parking </label> <br> <label><input
-						type="checkbox" name="bike-parking" id="filter-name"
-						class="filter-name"></input>Bike Parking </label> <br> <label><input
-						type="checkbox" name="good-kids" id="filter-name"
-						class="filter-name"></input>Kid Friendly </label> <br> <label><input
-						type="checkbox" name="good-groups" id="filter-name"
-						class="filter-name"></input>Large Group</label> <br> <label><input
-						type="checkbox" name="wi-fi" id="filter-name" class="filter-name"></input>Wifi</label>
-					<br> <label><input type="checkbox" name="tv"
-						id="filter-name" class="filter-name"></input>TV</label> <br> <label><input
-						type="checkbox" name="pool-table" id="filter-name"
-						class="filter-name"></input>Pool Table </label> <br> <br>
-				</div>
-				<div class="noise-amb-container">
-					<div class="noise-level">
-						<label class="indent">Noise Level:</label><label><input
-							type="checkbox" name="noise-very-loud" id="filter-name"
-							class="filter-name"></input>Very Loud </label><label><input
-							type="checkbox" name="noise-loud" id="filter-name"
-							class="filter-name"></input>Loud</label><label><input
-							type="checkbox" name="noise-average" id="filter-name"
-							class="filter-name"></input>Average</label>
+					<div class="filter">
+						<label><input type="checkbox" name="patio"
+							id="filter-name" class="filter-name"></input>Patio</label> <br> <label><input
+							type="checkbox" name="off-street-parking" id="filter-name"
+							class="filter-name"></input>Off-Street Parking </label> <br> <label><input
+							type="checkbox" name="bike-parking" id="filter-name"
+							class="filter-name"></input>Bike Parking </label> <br> <label><input
+							type="checkbox" name="good-kids" id="filter-name"
+							class="filter-name"></input>Kid Friendly </label> <br> <label><input
+							type="checkbox" name="good-groups" id="filter-name"
+							class="filter-name"></input>Large Group</label> <br> <label><input
+							type="checkbox" name="wi-fi" id="filter-name" class="filter-name"></input>Wifi</label>
+						<br> <label><input type="checkbox" name="tv"
+							id="filter-name" class="filter-name"></input>TV</label> <br> <label><input
+							type="checkbox" name="pool-table" id="filter-name"
+							class="filter-name"></input>Pool Table </label> <br> <br>
 					</div>
-					<div class="ambiance">
-						<label class="indent">Ambiance:</label> <label><input
-							type="checkbox" name="amb-casual" id="filter-name"
-							class="filter-name"></input>Casual</label> <label><input
-							type="checkbox" name="amb-trendy" id="filter-name"
-							class="filter-name"></input>Trendy</label> <label><input
-							type="checkbox" name="amb-sports" id="filter-name"
-							class="filter-name"></input>Sports</label> <label><input
-							type="checkbox" name="amb-dive" id="filter-name"
-							class="filter-name"></input>Dive</label> <label><input
-							type="checkbox" name="amb-pub" id="filter-name"
-							class="filter-name"></input>Pub</label>
+					<div class="noise-amb-container">
+						<div class="noise-level">
+							<label class="indent">Noise Level:</label><label><input
+								type="checkbox" name="noise-very-loud" id="filter-name"
+								class="filter-name"></input>Very Loud </label><label><input
+								type="checkbox" name="noise-loud" id="filter-name"
+								class="filter-name"></input>Loud</label><label><input
+								type="checkbox" name="noise-average" id="filter-name"
+								class="filter-name"></input>Average</label>
+						</div>
+						<div class="ambiance">
+							<label class="indent">Ambiance:</label> <label><input
+								type="checkbox" name="amb-casual" id="filter-name"
+								class="filter-name"></input>Casual</label> <label><input
+								type="checkbox" name="amb-trendy" id="filter-name"
+								class="filter-name"></input>Trendy</label> <label><input
+								type="checkbox" name="amb-sports" id="filter-name"
+								class="filter-name"></input>Sports</label> <label><input
+								type="checkbox" name="amb-dive" id="filter-name"
+								class="filter-name"></input>Dive</label> <label><input
+								type="checkbox" name="amb-pub" id="filter-name"
+								class="filter-name"></input>Pub</label>
+						</div>
 					</div>
-				</div>
 				</div>
 
 				<div class="button-container">
-				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
-					by Filters</button>
-				<button id="resetMarkers" name="resetMarkers">Reset</button>
+					<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
+						by Filters</button>
+					<button type="reset" id="resetMarkers" name="resetMarkers">Reset</button>
 				</div>
 			</div>
 		</div>
