--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -17,7 +17,7 @@
 		</nav>
 	</header>
 	<div>
-		<img class="header-pic" src="images/happyhourbanner.png" />
+		<!-- <img class="header-pic" src="images/clear-glasses-banner.jpg" /> -->
 	</div>
 
 	<h1 class="title">Columbus Happy Hours!</h1>
