moved clear bottle image to a div instead of background image

--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -17,7 +17,7 @@
 		</nav>
 	</header>
 	<div>
-		<!-- <img class="header-pic" src="images/clear-glasses-banner.jpg" /> -->
+		<img class="header-pic" src="images/cropped-clear-bottle.jpg" /> -->
 	</div>
 
 	<h1 class="title">Columbus Happy Hours!</h1>
