final-styling fixes

--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -9,23 +9,21 @@
 <body>
 	<header>
 		<nav class="navbar">
-			<img class="logo" src="images/happyLogo4.gif" />
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-			</ul>
+			<img class="logo" src="images/happyLogo5.gif" />
+
 		</nav>
 	</header>
 	<div>
-		<img class="header-pic" src="images/cropped-clear-bottle.jpg" /> -->
+		<img class="header-pic" src="images/pour.jpg" /> -->
 	</div>
 
 	<h1 class="title">Columbus Happy Hours!</h1>
 
 
 	<div class="lower-page-container">
+	<div id="googleMap"></div>
 		<div class="filter-sidebar">
-			<h3>Filters</h3>
+			<h3>Find a Happy Hour:</h3>
 			<div class="schedule-filter">
 
 					<label for="startTime">Start Time: </label>
@@ -178,11 +176,10 @@
 				</div>
 			</div>
 		</div>
-		<div id="googleMap"></div>
 	</div>
 
 	<footer>
-		<img src="images/DD.gif">
+		<h4>Drink Responsibly.</h4>
 	</footer>
 
 
