--- a/src/main/resources/static/allEstablishmentsTemplate.html
+++ b/src/main/resources/static/allEstablishmentsTemplate.html
@@ -14,7 +14,7 @@
 		</nav>
 	</header>
 	<div>
-		<img class="header-pic" src="images/pour.jpg" /> -->
+		<img class="header-pic" src="images/glasses.png" /> -->
 	</div>
 
 	<h1 class="title">Columbus Happy Hours!</h1>
